--- a/index.html
+++ b/index.html
@@ -5,10 +5,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Date Quiz</title>
     <link rel="stylesheet" href="/src/output.css">
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+            const startTheQuiz = document.getElementById('start-the-quiz');
+            const selectQuestions = document.querySelector('select');
+
+            startTheQuiz.addEventListener('click', () => {
+                const questions = selectQuestions.value;
+                window.location.href = `/src/quiz.html?questions=${questions}`;
+            });
+        });
+    </script>
 </head>
 <body>
     <div class="bg-white">
         <header class="absolute inset-x-0 top-0 z-50">
+            <div class="max-w-7xl mx-auto px-6 lg:px-8">
+                <div class="flex items-center justify-between py-4">
+                    <a href="/index.html" class="text-indigo-600 font-semibold text-lg">Date Quiz</a>
+                </div>
+            </div>
         </header>
         <div class="relative isolate px-6 pt-14 lg:px-8">
             <div class="absolute inset-x-0 -top-40 -z-10 transform-gpu overflow-hidden blur-3xl sm:-top-80" aria-hidden="true">
@@ -19,7 +35,13 @@
                     <h1 class="text-balance text-5xl font-semibold tracking-tight text-gray-900 sm:text-7xl">Day of the date quiz</h1>
                     <p class="mt-8 text-pretty text-lg font-medium text-gray-500 sm:text-xl/8">Answer the questions as fast as possible with the day of the week for each date.</p>
                     <div class="mt-10 flex items-center justify-center gap-x-6">
-                        <a href="/src/quiz.html?questions=10" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Let's a go!</a>
+                        <select class="rounded-md bg-gray-100 px-3.5 py-2.5 text-sm font-semibold text-gray-900 shadow-sm focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">
+                            <option value="1">1 question</option>
+                            <option value="5">5 questions</option>
+                            <option value="10">10 questions</option>
+                            <option value="15">15 questions</option>
+                        </select>
+                        <button id="start-the-quiz" class="rounded-md bg-indigo-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-indigo-500 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-indigo-600">Let's a go!</button>
                     </div>
                 </div>
             </div>
