--- a/src/quiz.html
+++ b/src/quiz.html
@@ -79,6 +79,13 @@
     </script>
 </head>
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
+	<header class="absolute inset-x-0 top-0 z-50">
+		<div class="max-w-7xl mx-auto px-6 lg:px-8">
+			<div class="flex items-center justify-between py-4">
+				<a href="/index.html" class="text-indigo-600 font-semibold text-lg">Date Quiz</a>
+			</div>
+		</div>
+	</header>
     <div id="game" class="bg-white p-6 rounded-lg shadow-lg text-center">
 		<div id="alerts"></div>
         <h1 class="text-xl font-bold mb-4">What day of the week is:</h1>
