--- a/src/quiz.html
+++ b/src/quiz.html
@@ -8,7 +8,8 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
 			const urlParams = new URLSearchParams(window.location.search);
-			let questions = parseInt(urlParams.get('questions')) || 10;
+			const numberOfQuestions = parseInt(urlParams.get('questions')) || 10;
+			let questions = numberOfQuestions;
 			const dayButtons = document.querySelectorAll('.day-button');
 			const daysOfWeek = ['Sunday', 'Monday', 'Tuesday', 'Wednesday', 'Thursday', 'Friday', 'Saturday'];
 			const startTime = Date.now();
@@ -32,11 +33,13 @@
 				
 
 			const askQuestion = () => {
-				const randomDate = new Date(Date.now() + Math.floor(Math.random() * 10000000000));
+				const now = Date.now();
+                const randomTimestamp = Math.floor(Math.random() * now);
+                const randomDate = new Date(randomTimestamp);
 				correctDay = daysOfWeek[randomDate.getDay()];
-				console.log(correctDay)
 				const localizedDate = randomDate.toLocaleDateString();
 				document.getElementById('question').innerText = `${localizedDate}`;
+				document.getElementById('numberOfQuestion').innerText = `Question: ${numberOfQuestions-questions+1}/${numberOfQuestions}`;
 			};
 
 			const updateTimer = () => {
@@ -87,6 +90,7 @@
 		</div>
 	</header>
     <div id="game" class="bg-white p-6 rounded-lg shadow-lg text-center">
+		<div id="numberOfQuestion" class="mb-8"></div>
 		<div id="alerts"></div>
         <h1 class="text-xl font-bold mb-4">What day of the week is:</h1>
 		<p class="mb-8" id="question"></p>
